--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,11 +6,26 @@
     "configurations": [
         
         {
-            "name": "lesson5_1 debug",
+            "name": "現有的檔案",
             "type": "debugpy",
             "request": "launch",
             "program": "${file}",
             "console": "integratedTerminal"
+        },
+        {
+            "name": "lesson5_1",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/lesson5/lesson5_1.py",
+            "console": "integratedTerminal"
+        },
+        {
+            "name": "lesson5_2",
+            "type": "debugpy",
+            "request": "launch",
+            "program": "${workspaceFolder}/lesson5/lesson5_2.py",
+            "console": "integratedTerminal"
         }
+        
     ]
 }
