--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,7 @@ dependencies = [
     "nest-asyncio>=1.6.0",
     "playwright>=1.56.0",
 ]
+[tool.pyrefly]
+project-includes = ["."]
+project-excludes = ["**/__pycache__", ".venv", "build", "dist"]
+python_version = "3.10"
