--- a/.gitignore
+++ b/.gitignore
@@ -188,6 +188,10 @@ cython_debug/
 #  you could uncomment the following to ignore the entire vscode folder
 .vscode/
 
+# Gemini Code Assist
+#  Gemini settings may contain sensitive API keys and MCP configurations
+.gemini/
+
 # Ruff stuff:
 .ruff_cache/
 
