--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "ipykernel>=7.1.0",
     "nest-asyncio>=1.6.0",
     "playwright>=1.56.0",
+    "streamlit>=1.30.0",
+    "pandas>=2.0.0",
 ]
